--- a/package.json
+++ b/package.json
@@ -48,5 +48,5 @@
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-react": "^7.33.2"
   },
-  "proxy": "http://192.168.0.144:5214/"
+  "proxy": "http://192.168.0.144:5214"
 }
