feat :  상세페이지 데이터 연동

--- a/package.json
+++ b/package.json
@@ -47,5 +47,5 @@
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-react": "^7.33.2"
   },
-  "proxy": ""
-}
+  "proxy": "http://192.168.0.144:5214"
+ }
